--- a/package.json
+++ b/package.json
@@ -6,25 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
+    "lucide-react": "^0.555.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^22.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.22",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.37.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
